Account for sign in non decimal value.